Update website: Add CTAs, adjust layouts, replace Calendly with WhatsApp
- Added CTA links to Uliassi (Forbes) and Giulia (We Love Budapest & CiboToday)
- Replaced Ginori placeholder with SIGEP Barry Callebaut photo
- Adjusted image layouts (Uliassi 2x height, Contrada/ALMA portraits, Zsiraf full-width)
- Updated all Colorno references to Parma
- Added Giulia photo and condensed bio text by 50%
- Replaced Calendly booking with direct WhatsApp link (+39 348 692 1877)
- Updated OpenGraph image to .jpg format

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
     <!-- Calendly widget -->
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -116,13 +116,7 @@
     <canvas id="particles-canvas" class="particles-background"></canvas>
 
     <!-- Calendly Modal -->
-    <div id="calendly-modal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close" id="close-calendly">&times;</button>
-            <div class="calendly-inline-widget" data-url="https://calendly.com/almosgaleotti/30min?hide_gdpr_banner=1">
-            </div>
-        </div>
-    </div>
+
 
     <div class="container">
         <div class="layout">
@@ -141,7 +135,9 @@
                     intersection of education, gastronomy, and contemporary hospitality.</p>
 
                 <div class="cta-buttons">
-                    <button class="btn btn-primary" id="open-calendly">Book a call</button>
+                    <a href="https://wa.me/393486921877" target="_blank" class="btn btn-primary">
+                        Text me on WhatsApp
+                    </a>
                     <a href="mailto:almos.galeotti@gmail.com" class="btn btn-secondary btn-email">
                         Email me
                         <span class="copy-email-icon" id="copy-email" title="Copy email">
